--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -37,11 +37,9 @@
                 android:id="@+id/rebate_note"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/action_bar_half_margin"
                 android:textSize="@dimen/fontsize_10sp"
-                android:text="@string/rebate_text"
-                android:textColor="@color/staples_dark_gray"
-                android:visibility="gone"/>
+                android:text="@string/rebate_note"
+                android:textColor="@color/staples_dark_gray"/>
             <app.staples.mobile.cfa.widget.IndicatorBlock
                 android:id="@+id/indicators"
                 style="@style/IndicatorBlock"
