--- a/app/src/main/res/layout/credit_card_fragment.xml
+++ b/app/src/main/res/layout/credit_card_fragment.xml
@@ -2,7 +2,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="@dimen/margin_16dp">
+    android:padding="@dimen/margin_16dp"
+    android:background="@color/staples_white">
     <include layout="@layout/credit_card_block"/>
     <LinearLayout
         android:layout_width="match_parent"
