--- a/app/src/main/res/layout/notify_prefs_fragment.xml
+++ b/app/src/main/res/layout/notify_prefs_fragment.xml
@@ -4,32 +4,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="@dimen/margin_16dp"
-    android:paddingRight="@dimen/margin_16dp">
+    android:paddingRight="@dimen/margin_16dp"
+    android:background="@color/staples_white">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingTop="@dimen/verticalspacing_16dp"
-        android:textColor="@color/staples_black"
-        android:textSize="@dimen/fontsize_24sp"
-        android:text="@string/notification_title"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingTop="@dimen/verticalspacing_16dp"
-        android:paddingBottom="@dimen/verticalspacing_16dp"
-        android:textColor="@color/staples_dark_gray"
-        android:textSize="@dimen/fontsize_12sp"
-        android:text="@string/notification_hint"/>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/staples_middle_gray" />
-
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="@dimen/verticalspacing_16dp"
+            android:textColor="@color/staples_black"
+            android:textSize="@dimen/fontsize_24sp"
+            android:text="@string/notification_title"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="@dimen/verticalspacing_16dp"
+            android:paddingBottom="@dimen/verticalspacing_16dp"
+            android:textColor="@color/staples_dark_gray"
+            android:textSize="@dimen/fontsize_12sp"
+            android:text="@string/notification_hint"/>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/staples_middle_gray" />
     </LinearLayout>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/list"
