reusing some of existing code and ui is redesigned according to new comps

--- a/app/src/main/res/layout/fragment_weekly_ad.xml
+++ b/app/src/main/res/layout/fragment_weekly_ad.xml
@@ -60,6 +60,7 @@
         android:layout_marginTop="@dimen/margin_16dp"
         card_view:cardBackgroundColor="@color/staples_white">
         <LinearLayout
+            android:id="@+id/deal_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
