--- a/app/src/main/res/layout/weekly_ad_list_item.xml
+++ b/app/src/main/res/layout/weekly_ad_list_item.xml
@@ -4,71 +4,77 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="@dimen/action_bar_half_margin"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:background="@color/staples_white">
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/availability"
-        android:textSize="@dimen/fontsize_14sp"
-        android:textColor="@color/staples_red"
-        android:gravity="center"
-        android:visibility="gone"
-        android:textStyle="bold"
-        android:text="@string/avail_retailonly"/>
     <ImageView
         android:id="@+id/image"
-        android:layout_width="@dimen/weekly_ad_list_item_image_width"
-        android:layout_height="@dimen/weekly_ad_list_item_image_height"
+        android:layout_width="@dimen/image_square_size"
+        android:layout_height="@dimen/image_square_size"
         android:layout_gravity="center_horizontal"
         android:paddingTop="@dimen/verticalspacing_8dp" />
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/fontsize_14sp"
-        android:paddingTop="@dimen/verticalspacing_8dp"
-        android:maxLines="2"
-        android:ellipsize="end"
-        android:textColor="@color/staples_black"/>
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/action_bar_half_margin"
-        android:orientation="horizontal">
+        android:padding="@dimen/action_bar_half_margin"
+        android:orientation="vertical">
         <TextView
-            android:layout_width="wrap_content"
+            android:id="@+id/title"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/pricing"
-            android:textSize="@dimen/fontsize_16sp"
-            android:textColor="@color/staples_red"
+            android:textSize="@dimen/fontsize_14sp"
+            android:paddingTop="@dimen/verticalspacing_8dp"
             android:maxLines="2"
-            android:ellipsize="end"/>
-        <TextView
-            android:layout_width="wrap_content"
+            android:ellipsize="end"
+            android:textColor="@color/staples_black"/>
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/pricing_unit"
-            android:textSize="@dimen/fontsize_12sp"
-            android:textColor="@color/staples_dark_gray"
-            android:paddingLeft="@dimen/action_bar_quarter_margin"/>
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/progress_bar_width"
-            android:layout_gravity="bottom"
-            android:paddingRight="@dimen/margin_16dp">
-            <ImageView
-                android:id="@+id/action"
+            android:paddingTop="@dimen/action_bar_half_margin"
+            android:orientation="horizontal">
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:src="@drawable/ic_add_black"
-                android:visibility="gone"/>
-            <ProgressBar
-                android:id="@+id/whirlie"
-                android:layout_width="@dimen/progress_bar_width"
+                android:id="@+id/pricing"
+                android:textSize="@dimen/fontsize_16sp"
+                android:textColor="@color/staples_red"
+                android:maxLines="2"
+                android:ellipsize="end"/>
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:visibility="gone"/>
-        </RelativeLayout>
+                android:id="@+id/pricing_unit"
+                android:textSize="@dimen/fontsize_12sp"
+                android:textColor="@color/staples_dark_gray"
+                android:paddingLeft="@dimen/action_bar_quarter_margin"/>
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/progress_bar_width"
+                android:layout_gravity="bottom"
+                android:paddingTop="@dimen/action_bar_half_margin"
+                android:paddingRight="@dimen/margin_16dp">
+                <ImageView
+                    android:id="@+id/action"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:src="@drawable/ic_add_black"
+                    android:visibility="gone"/>
+                <ProgressBar
+                    android:id="@+id/whirlie"
+                    android:layout_width="@dimen/progress_bar_width"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:visibility="gone"/>
+            </RelativeLayout>
+        </LinearLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/availability"
+            android:textSize="@dimen/fontsize_14sp"
+            android:textColor="@color/staples_red"
+            android:visibility="gone"
+            android:textStyle="bold"
+            android:text="@string/avail_retailonly"/>
     </LinearLayout>
 </LinearLayout>
