--- a/app/src/main/res/layout/fragment_weekly_ad.xml
+++ b/app/src/main/res/layout/fragment_weekly_ad.xml
@@ -7,7 +7,7 @@
     tools:context="app.staples.mobile.cfa.weeklyad_refresh.WeeklyAdFragment">
 
     <RelativeLayout
-        android:layout_marginTop="@dimen/margin_16dp"
+        android:layout_marginTop="@dimen/action_bar_half_margin"
         android:layout_width="match_parent"
         android:layout_marginLeft="@dimen/action_bar_half_margin"
         android:layout_marginRight="@dimen/action_bar_half_margin"
@@ -47,6 +47,17 @@
             android:src="@drawable/ic_view_list_black"/>
     </RelativeLayout>
 
+    <!-- WeeklyAd promotion images-->
+    <android.support.v4.view.ViewPager
+        android:id="@+id/promotion_images"
+        android:layout_width="match_parent"
+        android:layout_height="320dp"
+        android:paddingLeft="@dimen/action_bar_half_margin"
+        android:paddingRight="@dimen/action_bar_half_margin"
+        android:paddingTop="@dimen/action_bar_half_margin"
+        android:paddingBottom="@dimen/action_bar_half_margin"
+        android:background="@color/staples_off_white" />
+
     <!-- Best deal of the week layout-->
     <android.support.v7.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
@@ -57,7 +68,7 @@
         card_view:cardElevation="2dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="@dimen/margin_16dp"
+        android:layout_marginTop="@dimen/action_bar_half_margin"
         card_view:cardBackgroundColor="@color/staples_white">
         <LinearLayout
             android:id="@+id/deal_layout"
