--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -49,7 +49,7 @@
     <dimen name="weekly_ad_category_item_image_width">100dp</dimen>
     <dimen name="weekly_ad_category_item_image_height">100dp</dimen>
     <dimen name="personal_feed_item_image_width">120dp</dimen>
-    <dimen name="personal_feed_item_image_height">120dp</dimen>
+    <dimen name="personal_feed_item_image_height">120dp</dimen>\
     <dimen name="personal_feed_arrow">28dp</dimen>
 
     <!--SKU-->
