stable build with all the list and animations working

--- a/app/src/main/res/layout/fragment_weekly_ad.xml
+++ b/app/src/main/res/layout/fragment_weekly_ad.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<app.staples.mobile.cfa.widget.AnimatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -6,63 +6,48 @@
     android:background="@color/staples_off_white"
     tools:context="app.staples.mobile.cfa.weeklyad_refresh.WeeklyAdFragment">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_marginTop="@dimen/action_bar_half_margin"
         android:layout_width="match_parent"
         android:layout_marginLeft="@dimen/action_bar_half_margin"
         android:layout_marginRight="@dimen/action_bar_half_margin"
         android:layout_height="wrap_content"
-        android:background="@color/staples_white">
-        <ImageView
-            android:id="@+id/search_icon"
-            android:padding="@dimen/margin_16dp"
-            android:layout_width="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:src="@drawable/ic_search_black"/>
-        <EditText
-            android:id="@+id/search_box"
-            android:padding="@dimen/margin_16dp"
-            android:singleLine="true"
-            android:imeOptions="actionSearch"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/search_icon"
-            android:hint="@string/weekly_ad_search_hint"/>
+            android:id="@+id/store_name"
+            android:padding="@dimen/action_bar_half_margin"
+            android:textSize="@dimen/fontsize_20sp"
+            android:textStyle="bold"
+            android:layout_weight="1"/>
         <ImageView
             android:id="@+id/goto_here_switch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="@dimen/margin_16dp"
-            android:background="@color/staples_white"
-            android:layout_toLeftOf="@+id/list_switch"
+            android:padding="@dimen/action_bar_half_margin"
             android:src="@drawable/ic_store_locator_black"/>
         <ImageView
             android:id="@+id/list_switch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="@dimen/margin_16dp"
-            android:background="@color/staples_white"
-            android:layout_alignParentRight="true"
+            android:padding="@dimen/action_bar_half_margin"
             android:src="@drawable/ic_view_list_black"/>
         <ImageView
             android:id="@+id/promotions_switch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="@dimen/margin_16dp"
-            android:background="@color/staples_white"
-            android:layout_alignParentRight="true"
+            android:padding="@dimen/action_bar_half_margin"
             android:src="@drawable/ic_weekly_ad_black"/>
-    </RelativeLayout>
+    </LinearLayout>
 
     <!-- WeeklyAd promotion images-->
     <android.support.v4.view.ViewPager
         android:id="@+id/promotion_images"
         android:layout_width="match_parent"
-        android:layout_height="320dp"
+        android:layout_height="300dp"
         android:paddingLeft="@dimen/action_bar_half_margin"
         android:paddingRight="@dimen/action_bar_half_margin"
-        android:paddingTop="@dimen/action_bar_half_margin"
         android:background="@color/staples_off_white" />
 
     <!-- Best deal of the week layout-->
@@ -148,4 +133,4 @@
         </android.support.v7.widget.RecyclerView>
     </android.support.v7.widget.CardView>
 
-</LinearLayout>
+</app.staples.mobile.cfa.widget.AnimatorLayout>
