--- a/app/src/main/res/layout/fragment_weekly_ad_category.xml
+++ b/app/src/main/res/layout/fragment_weekly_ad_category.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<app.staples.mobile.cfa.widget.AnimatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -36,4 +36,4 @@
         android:gravity="center"
         android:textColor="@color/staples_white"
         android:background="@drawable/oval_red"/>
-</LinearLayout>
+</app.staples.mobile.cfa.widget.AnimatorLayout >
