adapter changes efficient handling view all add and code not committed need to fix the fragment
Known issues:
add to cart working but whirl not working in list

--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -90,6 +90,9 @@
     <dimen name="rewards_card_height">196dp</dimen>
     <dimen name="rewards_card_width">320dp</dimen>
 
+    <dimen name="weeklyad_viewall_height">30dp</dimen>
+    <dimen name="weeklyad_viewall_width">70dp</dimen>
+
     <!--Home screen-->
     <dimen name="home_store_wrapper_padding">8dp</dimen>
     <dimen name="home_message_bar_height">50dp</dimen>
