--- a/app/src/main/res/layout/fragment_weekly_ad.xml
+++ b/app/src/main/res/layout/fragment_weekly_ad.xml
@@ -6,6 +6,7 @@
     android:background="@color/staples_off_white"
     tools:context="app.staples.mobile.cfa.weeklyad_refresh.WeeklyAdFragment">
 
+    // Store city and Store locator and Promotion page switcher images
     <LinearLayout
         android:layout_marginTop="@dimen/action_bar_half_margin"
         android:layout_width="match_parent"
@@ -70,7 +71,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/margin_32dp"
-                android:background="@color/staples_black">
+                android:background="@color/staples_red">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -107,6 +108,15 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:paddingLeft="@dimen/action_bar_half_margin"/>
+                    <Button
+                        android:id="@+id/dealViewAll"
+                        android:layout_width="@dimen/weeklyad_viewall_width"
+                        android:layout_height="@dimen/weeklyad_viewall_height"
+                        android:textSize="@dimen/fontsize_10sp"
+                        android:text="@string/weekly_ad_view_more"
+                        android:background="@color/staples_blue"
+                        android:textColor="@color/staples_white"
+                        android:layout_gravity="right"/>
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
