--- a/app/src/main/res/layout/daily_deal_item_tall.xml
+++ b/app/src/main/res/layout/daily_deal_item_tall.xml
@@ -20,10 +20,17 @@
             android:id="@+id/title"
             style="@style/SmallProductTitle"
             android:layout_marginTop="@dimen/margin_16dp"/>
+        <TextView
+            android:id="@+id/deal_promo_message"
+            style="@style/SmallPriceSticker"
+            android:layout_marginTop="@dimen/margin_16dp"
+            android:textColor="@color/staples_red"
+            />
         <app.staples.mobile.cfa.widget.PriceSticker
             android:id="@+id/pricing"
             style="@style/SmallPriceSticker"
-            android:layout_marginTop="@dimen/verticalspacing_8dp"/>
+            android:layout_marginTop="@dimen/verticalspacing_8dp"
+            android:visibility="gone"/>
         <app.staples.mobile.cfa.widget.RatingStars
             android:id="@+id/rating"
             style="@style/SmallRatingStars"
